src/css/main.css
body {
  margin: 0;
  background: black;
}

#scroll-marker {
  width: auto;
  opacity: 0;
  height: 25px;
  margin-bottom: 25px;
  transition: opacity ease-in-out 0.4s;
}

#bg-cont {
  width: 100vw;
  height: 100vh;
  min-height: 100%;
  margin: 0px 0px 0px 0px;
  position: fixed;
  top: 0;
  z-index: -1;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#bg {
  height: 100vh;
  width: 100vw;
  max-width: 600px;
  background-color: black;
  box-shadow: 0px 0px 25px 0px black;
  opacity: 0;
  transition: opacity ease-in-out 0.4s;
}

/* #bgimg {
  height: 100%;
  width: 100%;
  background-image: url("../assets/noise-texture.png");
  background-blend-mode: multiply;
  opacity: 0.1;
  background-size: 64px;
} */

#main-container {
  width: 100vw;
  height: 100vh;
  z-index: 3;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  color: rgb(89, 120, 214);
  opacity: 0;
  transition: opacity ease-in-out 0.4s;
  font-family: "IBM Plex Mono", monospace;
  font-size: 18px;
}

#written-content {
  font-weight: 400;
  width: 85vw;
  max-width: 500px;
  user-select: none;
}

#buffer-top {
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
}

#three {
  position: fixed;
  min-height: 100%;
  z-index: -2;
  margin: 0px 0px 0px 0px;
}

#bio {
  margin-top: 2px;
  margin-bottom: 8px;
}

.work-project {
  margin-left: -2%;
  margin-right: -2%;
  margin-bottom: 2%;
  padding-bottom: 20px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 3px;
  background-image: none;
  background-blend-mode: screen;
  background-size: cover;
  transition: background-color 0.4s;
}

.work-project:hover {
  background-color: rgba(169, 115, 212, 0.1);
}

.work-project:nth-child(2):hover {
  background-image: url("../assets/tapebg.png");
}

.work-project:nth-child(3):hover {
  background-image: url("../assets/musicbg.png");
}

video {
  width: 18%;
}

.project-text {
  width: 96%;
}

.project-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 20px;
  margin-top: 14px;
}

.frameworks {
  font-size: 12px;
}

.github-link {
  fill: white;
  height: 20px;
  opacity: 0;
  transition: opacity 0.4s;
}

h1 {
  font-family: "Rubik", sans-serif;
  font-weight: 500;
  font-size: 36px;
  margin-bottom: 6px;
}

h2 {
  font-family: "Rubik", sans-serif;
  font-weight: 500;
  font-size: 28px;
  margin-bottom: 4px;
  font-style: bold;
}

h3 {
  font-size: 18px;
  margin-top: 10px;
  margin-bottom: 5px;
}

p {
  font-size: 14px;
  line-height: 16px;
}

hr {
  height: 15px;
  border: 0px solid royalblue;
  opacity: 0.4;
}

#personal-links {
  font-size: 14px;
  width: 220px;
  display: flex;
  justify-content: space-between;
}

a {
  color: rgba(169, 115, 212, 0.9);
  transition: color 0.4s ease-in-out;
}

a:hover {
  color: white;
}

